Fixed issue with guestExpenses remaining after registering user. Also added padding to bottom, improving display on mobile.

--- a/resources/js/App.css
+++ b/resources/js/App.css
@@ -3,6 +3,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-family: 'Source Sans Pro', sans-serif;
+  padding-bottom: 20px;
 }
 
 .list{
